--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "joerhoney.com-2.0",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "description": "joerhoney.com-2.0",
   "author": "joerhoney",
   "keywords": [
@@ -18,12 +18,13 @@
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
     "babel-plugin-styled-components": "^2.1.4",
+    "babel-upgrade": "^1.0.1",
     "gatsby": "^5.12.4",
     "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^3.12.2",
     "gatsby-plugin-mdx": "^5.12.1",
-    "gatsby-plugin-preload-fonts": "^4.12.0",
+    "gatsby-plugin-preload-fonts": "^4.12.1",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-styled-components": "^6.12.0",
@@ -36,5 +37,13 @@
     "react-icons": "^4.11.0",
     "styled-components": "^6.1.0",
     "yarn": "^1.22.19"
-  }
+  },
+  "main": "index.js",
+  "repository": "git+https://github.com/joerhoney/joerhoney-2.0.git",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/joerhoney/joerhoney-2.0/issues"
+  },
+  "homepage": "https://github.com/joerhoney/joerhoney-2.0#readme",
+  "devDependencies": {}
 }
