--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-upgrade": "^1.0.1",
     "gatsby": "^5.12.4",
     "gatsby-background-image": "^1.6.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.12.2",
     "gatsby-plugin-mdx": "^5.12.1",
     "gatsby-plugin-sharp": "^5.12.3",
@@ -31,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "smooth-scroll": "^16.1.3",
     "styled-components": "^6.1.0",
     "yarn": "^1.22.19"
   },
