--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.12.2",
+    "gatsby-plugin-manifest": "^5.12.3",
     "gatsby-plugin-mdx": "^5.12.1",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-styled-components": "^6.12.0",
