--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
+    "@stripe/stripe-js": "^2.3.0",
     "babel-plugin-styled-components": "^2.1.4",
     "babel-upgrade": "^1.0.1",
     "gatsby": "^5.12.4",
@@ -27,6 +28,7 @@
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-source-filesystem": "^5.12.1",
+    "gatsby-source-stripe": "^4.0.0",
     "gatsby-transformer-sharp": "^5.12.3",
     "gbimage-bridge": "^0.2.2",
     "normalize.css": "^8.0.1",
@@ -34,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "smooth-scroll": "^16.1.3",
+    "stripe": "^14.12.0",
     "styled-components": "^6.1.0",
     "yarn": "^1.22.19"
   },
