--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-source-filesystem": "^5.12.1",
     "gatsby-source-stripe": "^4.0.0",
+    "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.12.3",
     "gbimage-bridge": "^0.2.2",
     "normalize.css": "^8.0.1",
