--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "gatsby-plugin-mdx": "^5.12.1",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-styled-components": "^6.12.0",
+    "gatsby-remark-images": "^7.13.1",
+    "gatsby-remark-relative-images": "^2.0.5",
+    "gatsby-source-contentful": "^8.13.1",
     "gatsby-source-filesystem": "^5.12.1",
     "gatsby-source-stripe": "^4.0.0",
     "gatsby-transformer-remark": "^6.13.1",
