--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^16.3.5",
     "@mdx-js/react": "^2.3.0",
     "@stripe/stripe-js": "^2.3.0",
     "babel-plugin-styled-components": "^2.1.4",
