--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-image": "^3.12.2",
     "gatsby-plugin-manifest": "^5.12.3",
     "gatsby-plugin-mdx": "^5.12.1",
+    "gatsby-plugin-schema-snapshot": "^4.13.0",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-remark-images": "^7.13.1",
     "gatsby-remark-relative-images": "^2.0.5",
