--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-image": "^3.12.2",
     "gatsby-plugin-manifest": "^5.12.3",
     "gatsby-plugin-mdx": "^5.12.1",
+    "gatsby-plugin-sass": "^6.13.1",
     "gatsby-plugin-schema-snapshot": "^4.13.0",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-remark-images": "^7.13.1",
@@ -40,6 +41,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "sass": "^1.77.0",
     "smooth-scroll": "^16.1.3",
     "stripe": "^14.12.0",
     "yarn": "^1.22.19"
