--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-transformer-sharp": "^5.12.3",
     "gbimage-bridge": "^0.2.2",
     "http-server": "^14.1.1",
+    "netlify-cli": "^17.23.6",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
