Added PrismJS, though it's not really highlighting anything. :/

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-schema-snapshot": "^4.13.0",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-remark-images": "^7.13.1",
+    "gatsby-remark-prismjs": "^7.13.1",
     "gatsby-remark-relative-images": "^2.0.5",
     "gatsby-source-contentful": "^8.13.1",
     "gatsby-source-filesystem": "^5.12.1",
@@ -40,6 +41,7 @@
     "http-server": "^14.1.1",
     "netlify-cli": "^17.23.6",
     "normalize.css": "^8.0.1",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
