--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-icons": "^4.11.0",
     "sass": "^1.77.0",
     "smooth-scroll": "^16.1.3",
+    "strapi-plugin-netlify-deployments": "^2.0.2",
     "stripe": "^14.12.0",
     "yarn": "^1.22.19"
   },
