--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "1.0.0",
   "private": false,
   "description": "joerhoney.com-2.0",
-  "author": "joerhoney",
   "keywords": [
     "gatsby"
   ],
+  "homepage": "https://github.com/joerhoney/joerhoney-2.0#readme",
+  "bugs": {
+    "url": "https://github.com/joerhoney/joerhoney-2.0/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joerhoney/joerhoney-2.0.git"
+  },
+  "license": "MIT",
+  "author": "joerhoney",
+  "main": "index.js",
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
     "build": "gatsby build",
+    "clean": "gatsby clean",
+    "develop": "gatsby develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "start": "gatsby develop"
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.3.5",
@@ -48,19 +58,8 @@
     "react-icons": "^4.11.0",
     "sass": "^1.77.0",
     "smooth-scroll": "^16.1.3",
-    "strapi-plugin-netlify-deployments": "^2.0.2",
     "stripe": "^14.12.0",
     "yarn": "^1.22.19"
   },
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/joerhoney/joerhoney-2.0.git"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/joerhoney/joerhoney-2.0/issues"
-  },
-  "homepage": "https://github.com/joerhoney/joerhoney-2.0#readme",
   "devDependencies": {}
 }
