--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   "bugs": {
     "url": "https://github.com/joerhoney/joerhoney-2.0/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/joerhoney/joerhoney-2.0.git"
-  },
+  "repository": "git+https://github.com/joerhoney/joerhoney-2.0.git",
   "license": "MIT",
   "author": "joerhoney",
   "main": "index.js",
@@ -29,7 +26,7 @@
     "@stripe/stripe-js": "^2.3.0",
     "babel-plugin-styled-components": "^2.1.4",
     "babel-upgrade": "^1.0.1",
-    "gatsby": "^5.13.5",
+    "gatsby": "^5.13.7",
     "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.12.2",
