--- a/package.json
+++ b/package.json
@@ -53,5 +53,11 @@
     "smooth-scroll": "^16.1.3",
     "stripe": "^14.12.0",
     "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "gatsby-plugin-postcss": "^6.13.1",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
   }
 }
