--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   "bugs": {
     "url": "https://github.com/joerhoney/joerhoney-2.0/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/joerhoney/joerhoney-2.0.git"
-  },
+  "repository": "git+https://github.com/joerhoney/joerhoney-2.0.git",
   "license": "MIT",
   "author": "joerhoney",
   "main": "index.js",
@@ -25,13 +22,11 @@
     "start": "gatsby develop"
   },
   "dependencies": {
-    "@contentful/rich-text-html-renderer": "^16.3.5",
     "@mdx-js/react": "^2.3.0",
     "@stripe/stripe-js": "^2.3.0",
     "babel-plugin-styled-components": "^2.1.4",
     "babel-upgrade": "^1.0.1",
-    "gatsby": "^5.13.5",
-    "gatsby-background-image": "^1.6.0",
+    "gatsby": "^5.13.7",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.12.2",
     "gatsby-plugin-manifest": "^5.12.3",
@@ -43,12 +38,10 @@
     "gatsby-remark-images": "^7.13.1",
     "gatsby-remark-prismjs": "^7.13.1",
     "gatsby-remark-relative-images": "^2.0.5",
-    "gatsby-source-contentful": "^8.13.1",
     "gatsby-source-filesystem": "^5.12.1",
     "gatsby-source-stripe": "^4.0.0",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.12.3",
-    "gbimage-bridge": "^0.2.2",
     "http-server": "^14.1.1",
     "netlify-cli": "^17.23.6",
     "normalize.css": "^8.0.1",
@@ -60,6 +53,5 @@
     "smooth-scroll": "^16.1.3",
     "stripe": "^14.12.0",
     "yarn": "^1.22.19"
-  },
-  "devDependencies": {}
+  }
 }
