--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "autoprefixer": "^10.4.20",
     "gatsby-plugin-postcss": "^6.13.1",
     "postcss": "^8.4.41",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10"
   }
 }
